@@ -67,11 +67,7 @@ module Sequel
             yield(r) if block_given?
             r
           rescue OCIException => e
-            if CONNECTION_ERROR_CODES.include?(e.code)  
-              raise(Sequel::DatabaseDisconnectError)              
-            else
-              raise
-            end
+            raise_error(e, :disconnect=>CONNECTION_ERROR_CODES.include?(e.code))
           end
         end
       end
